--- a/html/css/vane360.css
+++ b/html/css/vane360.css
@@ -83,15 +83,15 @@ z-index: 9; cursor: default; }
 .m-icon-person02 { width: 31px; height: 34px; background-position: -41px -115px; }
 .m-icon-zxbm { width: 20px; height: 25px; background-position: 0px 0px; }
 .m-icon-zxzx { width: 24px; height: 25px; background-position: -30px 0px; }
-.m-icon-sqws { width: 35px; height: 34px; background-position: 0px -158px;}
-.m-icon-zpj { width: 28px; height: 34px; background-position: -44px -158px;}
-.m-icon-yspx { width: 36px; height: 34px; background-position: -82px -158px;}
-
-.m-icon-ygyx { width: 50px; height: 33px; background-position: -2px -203px;}
-.m-icon-mgyx { width: 50px; height: 33px; background-position: -63px -203px;}
-.m-icon-dgyx { width: 50px; height: 33px; background-position: -124px -203px;}
-.m-icon-fgyx { width: 50px; height: 33px; background-position: -184px -203px;}
-
+.m-icon-sqws { width: 35px; height: 34px; background-position: 0px -158px; }
+.m-icon-zpj { width: 28px; height: 34px; background-position: -44px -158px; }
+.m-icon-yspx { width: 36px; height: 34px; background-position: -82px -158px; }
+.m-icon-school { width: 16px; height: 19px; background-position: -0px -247px; }
+.m-icon-back { width: 17px; height: 14px; background-position: -26px -250px; }
+.m-icon-ygyx { width: 50px; height: 33px; background-position: -2px -203px; }
+.m-icon-mgyx { width: 50px; height: 33px; background-position: -63px -203px; }
+.m-icon-dgyx { width: 50px; height: 33px; background-position: -124px -203px; }
+.m-icon-fgyx { width: 50px; height: 33px; background-position: -184px -203px; }
 /*! 名称：header & footer
     用途：页头页尾
 ======================================== */
@@ -149,12 +149,15 @@ z-index: 9; cursor: default; }
 .m-slide-main { width: 960px; height: 380px; overflow: hidden; margin: 10px 0; }
 .m-slide-main .m-slide-cont li a.m-slide-cont-fullPic { width: 960px; height: 380px; }
 .m-slide-main .m-slide-btns a { margin-top: -30px; }
-/*  === 标题模块 m-title ===  */00b46e
-.m-title { color: #333; font: normal 14px/20px "\5B8B\4F53"; margin: 20px 0 10px 0; }
+/*  === 标题模块 m-title ===  */00b46e .m-title {
+color: #333;
+font: normal 14px/20px "\5B8B\4F53";
+margin: 20px 0 10px 0;
+}
 .m-title a { color: #333; }
-.m-title h2 { float: left;  color: #00b46e; font-size: 18px; line-height: 24px; }
-.m-title h2 .m-block-green { display: inline-block; width: 6px; height: 16px; vertical-align:middle; background-color: #08B673; margin-right: 5px;}
-.m-title h2 span { display: inline-block; vertical-align:middle;} 
+.m-title h2 { float: left; color: #00b46e; font-size: 18px; line-height: 24px; }
+.m-title h2 .m-block-green { display: inline-block; width: 6px; height: 16px; vertical-align: middle; background-color: #08B673; margin-right: 5px; }
+.m-title h2 span { display: inline-block; vertical-align: middle; }
 .m-title .m-title-links { float: left; height: 24px; margin: 1px 0 0 20px; }
 .m-title .m-title-links a { display: inline-block; color: #999; font: normal 16px/20px "\5FAE\8F6F\96C5\9ED1"; padding: 2px 8px 3px; margin-right: 5px; -webkit-border-radius: 2px; -moz-border-radius: 2px; border-radius: 2px; }
 .m-title .m-title-links a:hover, .m-title .m-title-links a.active { color: #fff; text-decoration: none; background-color: #0099E6; }
@@ -204,15 +207,15 @@ z-index: 9; cursor: default; }
 .m-list-words { color: #999; font-style: italic; font-size: 14px; margin: -6px 0 14px; }
 .m-list-picT .ul-wrap { position: relative; width: 735px; overflow: hidden; z-index: 9; }
 .m-list-picT .ul-wrap ul { width: 770px; }
-.m-list-picT .ul-wrap li { position: relative; float: left; width: 355px; border-right:1px solid #C0C0C0; margin: 0 25px 60px 0; z-index: 9; }
+.m-list-picT .ul-wrap li { position: relative; float: left; width: 355px; border-right: 1px solid #C0C0C0; margin: 0 25px 60px 0; z-index: 9; }
 .m-list-picT .ul-wrap li .p-pic { position: relative; float: left; width: 75px; margin-top: 3px; z-index: 9; }
 .m-list-picT .ul-wrap li .p-pic a { display: block; width: 75px; height: 75px; overflow: hidden; }
-.m-list-picT .ul-wrap li .p-pic a img { display: block; width: 75px;}
+.m-list-picT .ul-wrap li .p-pic a img { display: block; width: 75px; }
 .m-list-picT .ul-wrap li .div-info { float: right; width: 260px; font: normal 14px/1 "\5B8B\4F53"; }
 .m-list-picT .ul-wrap li .div-info h4, .m-list-picT .ul-wrap li .div-info .name { font-size: 14px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; margin: 2px 0 5px; color: #333; }
 .m-list-picT .ul-wrap li .div-info h4 a { color: #00b46e; }
 .m-list-picT .ul-wrap li .div-info p { white-space: nowrap; overflow: hidden; text-overflow: ellipsis; line-height: 1.5; color: #666; }
-.m-list-picT .ul-wrap li .div-info p.p-link a { font-size:12px; color:#a9a9a9; }
+.m-list-picT .ul-wrap li .div-info p.p-link a { font-size: 12px; color: #a9a9a9; }
 /*  ===  分页模块 m-pagination ===  */
 .m-pagination { clear: both; display: block; margin: 20px auto; }
 .m-pagination p { text-align: center; }
@@ -233,7 +236,7 @@ z-index: 9; cursor: default; }
    用途：各页面css
 ======================================== */
 /* === 00-两栏整体框架 === */
-.sideNav {  float: left; width: 135px; height: 511px; background: url(../images/bg_border_shadow_r.png) no-repeat 120px 0; }
+.sideNav { float: left; width: 135px; height: 511px; background: url(../images/bg_border_shadow_r.png) no-repeat 120px 0; }
 .sideNav-in { width: 120px; }
 .sideNav-in h2 { position: relative; font: normal 14px/20px "\5FAE\8F6F\96C5\9ED1", Arial; color: #fff; background-color: #00B46E; padding: 3px 0 3px 25px; z-index: 9; }
 .sideNav-in h2 .span-decorate { position: absolute; right: -14px; bottom: 0; display: block; width: 14px; height: 26px; background-color: #00B46E; z-index: 99; }
@@ -243,25 +246,42 @@ z-index: 9; cursor: default; }
 .sideNav-in li a span { display: block; margin-top: 5px; }
 .sideNav-in .a-more { display: block; width: 120px; color: #808080; text-align: center; padding-top: 10px; }
 .main-cont { float: right; width: 770px; }
-.main-cont .m-title { margin:0 0 30px 0; }
+.main-cont .m-title { margin: 0 0 30px 0; }
 /* iscroll.js 高度设计 */
-#scroll-wrap { position: relative; height: 450px; z-index: 9; overflow-y:scroll\9;  }
-:root #scroll-wrap { overflow-y:hidden\0; }  /* Hack: ie9 */
+#scroll-wrap { position: relative; height: 450px; z-index: 9; overflow-y: scroll\9; }
+:root #scroll-wrap { overflow-y: hidden\0; }  /* Hack: ie9 */
 /* reset size */
-.lxzx-wrap #scroll-wrap { height:480px;}
-.lxkc-wrap #scroll-wrap { height:390px;}
-.ysyx-wrap #scroll-wrap { height:400px;}
-
+.lxzx-wrap #scroll-wrap { height: 480px; }
+.lxkc-wrap #scroll-wrap { height: 390px; }
+.ysyx-wrap #scroll-wrap { height: 400px; overflow:hidden; }
 /* === 01-首页 === */
 .index-wrap { }
 .index-wrap .bg-line { margin: 25px auto 10px; }
 .index-wrap .cooperation table { width: 100%; }
 .index-wrap .cooperation table th { text-align: center; }
 .index-wrap .cooperation table td { text-align: center; vertical-align: middle; }
-
+/* === 041-院校介绍详情页 === */
+.ysyx-wrap .ysyx-detail { color: #808080; font: normal 14px/20px "\5B8B\4F53", Arial; padding: 0 15px 10px 0; }
+.ysyx-wrap .ysyx-detail .m-title h2 { float: none; }
+.ysyx-wrap .ysyx-detail-top { position: relative; z-index: 9; }
+.ysyx-wrap .ysyx-detail-top .h2-big { color: #00b46e; font: normal 18px/22px "\5FAE\8F6F\96C5\9ED1", Arial; margin-bottom: 20px; }
+.ysyx-wrap .ysyx-detail-top .h2-big span { display: inline-block; vertical-align: middle; }
+.ysyx-wrap .ysyx-detail-top .btn-back { position: absolute; right: 0; top: 0; color: #00b46e; font: normal 18px/22px "\5FAE\8F6F\96C5\9ED1", Arial; z-index: 99; }
+.ysyx-wrap .ysyx-detail-top .btn-back span { display: inline-block; vertical-align: middle; margin-left: 3px; }
+.ysyx-wrap .ysyx-detail-top .ysyx-detail-top-info .school-pic { float: right; display: block; width: 500px; }
+.ysyx-wrap .ysyx-detail-top .ysyx-detail-top-info .text { float: left; width: 440px; }
+.ysyx-wrap .ysyx-detail-top .ysyx-detail-top-info .text p { line-height: 1.8; }
+.ysyx-wrap .ysyx-detail-top .ysyx-detail-top-info .text .school-logo { margin-top: 30px; }
+.ysyx-wrap .ysyx-detail-top .ysyx-detail-top-info .text .school-title { margin: 5px 0 20px; }
+.ysyx-wrap .ysyx-detail-top .ysyx-detail-top-info .text .school-title .span-en { color: #3e3e3e; font: normal 12px/18px "\5B8B\4F53"; }
+.ysyx-wrap .ysyx-detail-top .ysyx-detail-top-info .text .school-des { font: normal 12px/2 "\5B8B\4F53"; }
+.ysyx-wrap .ysyx-detail-cont { }
+.ysyx-wrap .ysyx-detail-cont .m-title h2 { border-top: 1px solid #C0C0C0; padding: 15px 0 15px; }
+.ysyx-wrap .ysyx-detail-cont li { margin-top: 20px; }
+.ysyx-wrap .ysyx-detail-cont li p { line-height: 1.6; }
+.ysyx-wrap .ysyx-detail-cont li p a { color: #808080; text-decoration: underline; }
 /* === 05-成功案例 === */
-.cgal-wrap .main-cont { margin-top: 10px;}
-.cgal-wrap .m-list-picT .ul-wrap li { border-right:0 none; margin-bottom:35px;}
-
+.cgal-wrap .main-cont { margin-top: 10px; }
+.cgal-wrap .m-list-picT .ul-wrap li { border-right: 0 none; margin-bottom: 35px; }
 /* === 08-关于我们 === */
-.gywm-wrap .about-us { position: relative; width: 770px; overflow:hidden; z-index: 9; }
+.gywm-wrap .about-us { position: relative; width: 770px; overflow: hidden; z-index: 9; }
